# MemoCheck

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
dashboard/: CNAME  index.html
data/: held_out_ids.txt  judge_cache.json
data/db_snapshot/: README.md  metric_scores.csv  test_runs.csv
data/results/: v0_vs_v1.json  v1_vs_v2.json
data/transcripts/: memo_001.json  memo_001.txt  memo_002.json  memo_002.txt  memo_003.json  memo_003.txt  memo_004.json  memo_004.txt  memo_005.json  memo_005.txt  memo_006.json  memo_006.txt  memo_007.json  memo_007.txt  memo_008.json  memo_008.txt  memo_009.json  memo_009.txt  memo_010.json  memo_010.txt  memo_011.json  memo_011.txt  memo_012.json  memo_012.txt  memo_013.json  memo_013.txt  memo_014.json  memo_014.txt  memo_015.json  memo_015.txt  memo_016.json  memo_016.txt  memo_017.json  memo_017.txt  memo_018.json  memo_018.txt  memo_019.json  memo_019.txt  memo_020.json  memo_020.txt  (+12 more)
docs/: labeling-guide.md  prompt-scaling-thoughts.md  run-to-run-nondeterminism.md  test-set-composition.md  v0-failure-analysis.md  v0-matcher-validation.md  v1-detection-retrospective.md  v1-prompt-design.md  v2-failure-analysis.md  v2-prompt-design.md
docs/adr/: 001-flattened-action-item-metrics.md  002-embedding-based-matching.md  003-ground-truth-time-window-schema.md  004-held-out-test-set.md  005-bootstrap-confidence-intervals.md
docs/agents/: domain.md
docs/superpowers/plans/: 2026-05-09-memocheck.md
docs/superpowers/specs/: 2026-05-09-memocheck-design.md
scripts/: build_charts.py  matcher_band_probe.py  matcher_spotcheck.py  matcher_threshold_probe.py  rescore_v0.py  smoke_test.py  transcribe.py
src/memocheck/: cli.py
src/memocheck/agent/: extractor.py  schema.py
src/memocheck/agent/prompts/: v0.py  v1.py  v2.py
src/memocheck/db/: persistence.py
src/memocheck/db/migrations/: 001_init.sql
src/memocheck/evals/: dataset.py  judge.py  matcher.py  report.py  runner.py  schema.py  scorer.py
tests/: test_agent.py  test_dataset.py  test_judge.py  test_matcher.py  test_persistence.py  test_report.py  test_runner.py  test_scorer.py
