[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memocheck"]

[project]
name = "memocheck"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "deepeval>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "typer>=0.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "mlx-whisper>=0.3.0",
    "pandas>=2.0.0",
    "sentence-transformers>=3.0.0",
    "scipy>=1.11.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
]

[project.scripts]
memocheck = "memocheck.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/memocheck/agent/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not integration'"
markers = [
    "slow: marks tests that load real ML models or hit the network",
    "integration: marks tests that require a live Postgres (DATABASE_URL); skip if unreachable",
]
